@@ -18,6 +18,8 @@ partman-base (124) UNRELEASED; urgency=low
   * Do partition indenting in another visual.d script instead of hardcoding
     it in partition_tree_choices().
   * Switch visual.d scripts to use column alignment (${!TAB}).
+  * Remove partition_tree_choice() "whitespaces" hack, now useless with the
+    new debconf_select().  (Closes: #271706)
 
  -- Jérémy Bobbio <lunar@debian.org>  Tue, 29 Jul 2008 15:25:08 +0000
 
